# my_local

./: .gitmodules  .pre-commit-config.yaml  README.md  format_code.sh  pyproject.toml
docs/engineering/: README.md
docs/graphql/: population_stats.md
docs/mylocal_1.0/: api.md
mylocal/: ingest_mylocal.py  main.py  query_mylocal.py
mylocal-stats/: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
mylocal-stats/mylocalstats/: manage.py
mylocal-stats/mylocalstats/mylocalstats/: asgi.py  settings.py  urls.py  wsgi.py
mylocal-stats/mylocalstats/population_stats/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
mylocal-stats/mylocalstats/population_stats/graphql/: queries.py  schema.py  types.py
mylocal-stats/mylocalstats/population_stats/management/commands/: insert_age_group.py  insert_ethnicity_distribution.py  insert_gender_distribution.py  insert_marital_status.py  insert_region_data.py  insert_religious_affiliation.py  insert_total_population.py
mylocal-stats/mylocalstats/population_stats/migrations/: 0001_initial.py  0002_region_centroid_altitude.py  0002_rename_asian_ethnicitydistribution_bharatha_and_more.py  0003_region_eqs_region_ints.py  0003_rename_married_maritalstatus_married_customary_and_more.py  0004_region_fips_region_hasc.py  0004_rename_christian_religiousaffiliation_islam_and_more.py
mylocal-stats/tests/: conftest.py  settings.py  test_models.py
mylocal/ai/: chat.py
mylocal/db/: __init__.py  connect.py  neo4j_driver.py
openapi/: openapi.yaml
tests/: test_ents.py  test_gnd.py  test_sample.py
