[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mylocalstats"
version = "0.1.0"
description = "A Python library for mylocal"
authors = [
    { name="Vibhatha Abeykoon", email="vibhatha@gmail.com" }
]
dependencies = [
    "neo4j",
    "pandas",
    "pyarrow",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-neo4j>=0.3.0",
    "langchain-text-splitters>=0.3.5",
    "langchain-openai>=0.3.3",
    "graphene-django>=3.0.0",
    "django-filter>=23.0",
    django-graphql-jwt>=3.0.0,
    "graphene-django>=3.0.0",
    "drf-yasg>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120 